--- a/Impressum.html
+++ b/Impressum.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>IBS</title>
+<title>My Homepage</title>
 <!-- Bootstrap-CSS -->
 <link href="dist/css/bootstrap.min.css" rel="stylesheet">
 <!-- Besondere Stile für diese Vorlage -->
@@ -25,7 +25,7 @@
 <span class="icon-bar"></span>
 <span class="icon-bar"></span>
 </button>
-<a class="navbar-brand">IBS</a>
+<a class="navbar-brand">Homepage</a>
 </div>
 <div id="navbar" class="collapse navbar-collapse">
 <ul class="nav navbar-nav">
@@ -38,9 +38,9 @@
 </nav>
 <div class="container">
 <div class="starter-template">
-<h1>Impressum</h1>
-<p>Adnan Omerhodzic</p>
-<p>ado85@gmx.de</p>
+<h1><b>Impressum</b></h1>
+<p class="impressum">Adnan Omerhodzic</p>
+<p class="impressum">ado85@gmx.de</p>
 </div>
 </div>
 <!-- Bootstrap-JavaScript
