--- a/Suchformular.html
+++ b/Suchformular.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>IBS</title>
+<title>My Homepage</title>
 <!-- Bootstrap-CSS -->
 <link href="dist/css/bootstrap.min.css" rel="stylesheet">
 <!-- Besondere Stile für diese Vorlage -->
@@ -25,7 +25,7 @@
 <span class="icon-bar"></span>
 <span class="icon-bar"></span>
 </button>
-<a class="navbar-brand">IBS</a>
+<a class="navbar-brand">Homepage</a>
 </div>
 <div id="navbar" class="collapse navbar-collapse">
 <ul class="nav navbar-nav">
@@ -38,7 +38,7 @@
 </nav>
 <div class="container">
 <div class="starter-template">
-<h1>Wikipedia(DE) Suche</h1>
+<h1><b>Wikipedia(DE) Suche</b></h1>
 <a href="http://wave.webaim.org/report#/http://ado85.cloudcontrolled.com/HausuebungIBS/suchformular.html">
 <img src="wcag2AAA.gif" alt="WCAG 2.0 AAA und Section 508 Richtlinien-Prüfung"/>
 </a>
