--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- <link rel="icon" href="../../favicon.ico"> -->
-<title>IBS</title>
+<title>My Homepage</title>
 <!-- Bootstrap core CSS -->
 <link href="dist/css/bootstrap.min.css" rel="stylesheet">
 <!-- Custom styles for this template -->
@@ -29,7 +29,7 @@
 <span class="icon-bar"></span>
 <span class="icon-bar"></span>
 </button>
-<a class="navbar-brand">IBS</a>
+<a class="navbar-brand">Homepage</a>
 </div>
 <div id="navbar" class="collapse navbar-collapse">
 <ul class="nav navbar-nav">
@@ -42,17 +42,18 @@
 </nav>
 <div class="container">
 <div class="starter-template">
-<h1>1. Hausübung</h1>
-<p class="lead">Hier die Links zur 1. Hausübung:</p>
-<ul>
-<li><a href="">1.Link</a></li>
-<li><a href="">2.Link</a></li>
+<h1><b>1. Hausübung</b></h1>
+<p class="lead">Hier die <b>Links</b> zur 1. Hausübung:</p>
+<ol id="links">
+<li><a href="http://www.github.com/Ado85/">Github</a></li>
+<li><a href="http://adnanomerhodzic1.cloudcontrolled.com/">My Website</a></li>
 <li><a href="http://www.codecademy.com/Ado10/">Codecademy</a></li>
-<li><a href="">4.Link</a></li>
-<li><a href="">5.Link</a></li>
-<li><a href="">6.Link</a></li>
-</ul>
+<li><a href="http://www.github.com/Ado85/webeng2014/pull/1/">Pull Request vom Kollegen auf meiner Seite</a></li>
+<li><a href="http://www.github.com/ramazanakkas/hausueb1/pull/1/">Pull Request als Reviewer</a></li>
+</ol>
 </div>
+</div>
+<div>
 </div><!-- /.container -->
 <!-- Bootstrap core JavaScript
 ================================================== -->
