--- a/Impressum.html
+++ b/Impressum.html
@@ -25,7 +25,7 @@
 <span class="icon-bar"></span>
 <span class="icon-bar"></span>
 </button>
-<a class="navbar-brand">Homepage</a>
+<a class="navbar-brand">Menü</a>
 </div>
 <div id="navbar" class="collapse navbar-collapse">
 <ul class="nav navbar-nav">
@@ -39,8 +39,8 @@
 <div class="container">
 <div class="starter-template">
 <h1><b>Impressum</b></h1>
-<p class="impressum">Adnan Omerhodzic</p>
-<p class="impressum">ado85@gmx.de</p>
+<h4><b>Name:   Adnan Omerhodzic</b></h4>
+<adresse>e-Mail: ado85@gmx.de</adresse>
 </div>
 </div>
 <!-- Bootstrap-JavaScript
