--- a/Suchformular.html
+++ b/Suchformular.html
@@ -39,7 +39,7 @@
 <div class="container">
 <div class="starter-template">
 <h1><b>Wikipedia(DE) Suche</b></h1>
-<a href="http://wave.webaim.org/report#/http://ado85.cloudcontrolled.com/HausuebungIBS/suchformular.html">
+<a href="http://wave.webaim.org/report#/http://adnanomerhodzic1.cloudcontrolled.com/HausuebungIBS/suchformular.html">
 <img src="wcag2AAA.gif" alt="WCAG 2.0 AAA und Section 508 Richtlinien-Prüfung"/>
 </a>
 <form class="form-horizontal" name="search" method="post" action="http://de.wikipedia.org/wiki/Spezial:Suche" role="form">
